--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,34 +1,23 @@
 <h1>Books#index</h1>
 
-<h2>User info</h2>
-
-<tr>
-  <%= image_tag current_user.get_profile_image(100,100) %>
-  <th>name</th>
-  <th><%= current_user.name %></th>
-</tr>
-<tr>
-  <th>introduction</th>
-  <th><%= current_user.introduction %></th>
-</tr>
-
-<!--<a% if current_user %>-->
-  <%= link_to "User編集", users_path %>
-<!--<a% end %>-->
-
-
-
-<h2>New book</h2>
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
-  <label>Title</label>
-    <%= f.text_field :title %>
-  <label>Opinion</label>
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+<% if @book.errors.any? %>
+  <div>
+    <h2>
+      <%= @book.errors.count %> errors prohibited this obj from being saved:
+    </h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
+<%= render 'list', book: @book %>
 
 <h1>以下、右画面（Book一覧）</h1>
+
+<h2>Books</h2>
 <thead>
   <th>Title</th>
   <th>Opinion</th>
@@ -38,8 +27,12 @@
 <tbody>
 <% @books.each do |book| %>
 <tr>
-  <td><%= image_tag book.user.get_profile_image(80,80) %></td>
-  <td><%= book.title %></td>
+  <%= link_to user_path(book.user.id) do %>
+    <td><%= image_tag book.user.get_profile_image(80,80) %></td>
+  <% end %>
+  <%= link_to book_path(book.id) do %>
+    <td><%= book.title %></td>
+  <% end %>
   <td><%= book.body %></td>
 </tr>
 <% end %>
