--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,20 @@
 <h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+
+<%= render 'list', book: @book %>
+
+<h2>Book detail</h2>
+
+<%= link_to user_path(@book.user_id) do %>
+  <%= image_tag @book.user.get_profile_image(80,80) %>
+  <%= @book.user.name %>
+<% end %>
+<%= link_to book_path(@book.id) do %>
+  <%= @book.title %>
+<% end %>
+  <%= @book.body %>
+
+<% if @book.user == current_user %>
+  <%= link_to "Edit", edit_book_path(@book.id) %>
+  <%= link_to "Destroy", book_path(@book.id), method: :delete %>
+<% end %>
+
