--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
       <% if user_signed_in? %>
         <li>
-          <%= link_to "Home" %>
+          <%= link_to "Home", user_path(current_user) %>
         </li>
         <li>
           <%= link_to "Users", users_path %>
