--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,21 @@
 <h1>Users#index</h1>
 
+<%= render 'books/list', books: @books %>
+
+<h2>Users</h2>
+<table>
+  <thead>
+    <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan=3></th>
+    </tr>
+  </thead>
+</table>
+
 <% @users.each do |user| %>
-  <!--<@%= image_tag @user.get_profile_image(80,80) %>-->
+  <%= image_tag user.get_profile_image(80,80) %>
   <p><%= user.name %></p>
   <%= link_to "Show", user_path(user.id) %>
 <% end %>
+
