--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,31 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+
+<% if @user.id == current_user.id %>
+  <%= render 'books/list', book: @book %>
+<% else %>
+  <h2>User info</h2>
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <table>
+    <tbody>
+      <tr>
+        <th>name</th>
+        <th><%= @user.name %></th>
+      </tr>
+      <tr>
+        <th>introduction</th>
+        <th><%= @user.introduction %></th>
+      </tr>
+    </tbody>
+  </table>
+<% end %>
+
+
+
+<% @user.books.each do |user_books| %>
+<%= link_to user_path(@user.id) do %>
+  <%= image_tag user_books.user.get_profile_image(80,80) %>
+<% end %>
+  <%= link_to "#{user_books.title}", book_path(user_books.id) %>
+  <%= user_books.body %>
+<% end %>
