--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users#index</h1>
 
-<%= render 'books/list', books: @books %>
+<%= render 'books/list', book: @book %>
 
 <h2>Users</h2>
 <table>
