--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Users#show</h1>
 
 
-<% if @user.id == current_user.id %>
+<% if @user == current_user %>
   <%= render 'books/list', book: @book %>
 <% else %>
   <h2>User info</h2>
@@ -18,6 +18,18 @@
       </tr>
     </tbody>
   </table>
+
+<%= link_to "User編集(仮)", users_path %>
+
+  <h2>New book</h2>
+    <%= form_with model: @book, url: '/books', method: :post do |f| %>
+  <label>Title</label>
+    <%= f.text_field :title %>
+  <label>Opinion</label>
+    <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+<% end %>
+
 <% end %>
 
 
