--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,6 @@
-<h1>About画面　あとで消す</h1>
+<div class="container">
+  <div class="row">
+    <h1 class="px-3 mx-auto">Welcome to <i class="fas fa-book"></i><strong>Bookers</strong>!</h1>
+  </div>
+</div>
 
-
-<h1>Welcome to 📕<strong>Bookers!</strong></h1>
