--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Books#index</h1>
+<div class="container px-5 px-sm-0">
 
 <% if @book.errors.any? %>
-  <div>
-    <h2>
+  <div id="error_explanation">
+    <h3>
       <%= @book.errors.count %> errors prohibited this obj from being saved:
-    </h2>
+    </h3>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -13,28 +13,41 @@
   </div>
 <% end %>
 
-<%= render 'list', book: @book %>
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'list' %>
+      <div class="row">
+        <%= link_to edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <%= render 'form_new' %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+<table class="table table-hover table-inverse">
+  <thead>
+    <th></th>
+    <th>Title</th>
+    <th>Opinion</th>
+    <th colspan=3></th>
+  </thead>
 
-<h1>以下、右画面（Book一覧）</h1>
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= link_to user_path(book.user.id) do %>
+        <%= image_tag book.user.get_profile_image(80,80) %>
+      <% end %></td>
+      <td><%= link_to book_path(book.id) do %>
+        <%= book.title %>
+      <% end %></td>
+      <td><%= book.body %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<h2>Books</h2>
-<thead>
-  <th>Title</th>
-  <th>Opinion</th>
-  <th colspan=3></th>
-</thead>
-
-<tbody>
-<% @books.each do |book| %>
-<tr>
-  <%= link_to user_path(book.user.id) do %>
-    <td><%= image_tag book.user.get_profile_image(80,80) %></td>
-  <% end %>
-  <%= link_to book_path(book.id) do %>
-    <td><%= book.title %></td>
-  <% end %>
-  <td><%= book.body %></td>
-</tr>
-<% end %>
-
-</tbody>
+    </div>
+  </div>
+</div>
