--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,59 +2,84 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
   </head>
 
   <body>
     <header>
-
-      <%= link_to "Bookers", top_path %>
-
-      <% if user_signed_in? %>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to "/", class: 'navbar-brand' do %>
+            <span>Bookers</span>
+          <% end %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
+            <ul class="navbar-nav ml-auto">
+    <% if user_signed_in? %>
         <li>
-          <%= link_to "Home", user_path(current_user) %>
+          <%= link_to user_path(current_user), class: 'nav-link text-light' do %>
+          <i class="fas fa-home"></i>Home<% end %>
         </li>
         <li>
-          <%= link_to "Users", users_path %>
+          <%= link_to users_path, class: 'nav-link text-light' do %>
+          <i class="fas fa-users"></i>Users<% end %>
         </li>
         <li>
-          <%= link_to "Books", books_path %>
+          <%= link_to books_path, class: 'nav-link text-light' do %>
+          <i class="fas fa-book-open"></i>Books<% end %>
         </li>
         <li>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete  %>
+          <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
+          <i class="fas fa-users"></i>Log out<% end %>
         </li>
       <% else %>
         <li>
-          <%= link_to "Home", top_path %>
+          <%= link_to "/", class: 'nav-link text-light' do %>
+            <i class="fas fa-home"></i>Home<% end %>
         </li>
         <li>
-          <%= link_to "About", about_path %>
+          <%= link_to about_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-link"></i>About<% end %>
         </li>
         <li>
-          <%= link_to "Sign up", new_user_registration_path %>
+          <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
+            <i class="fas fa-user-plus"></i>Sign up<% end %>
         </li>
         <li>
-          <%= link_to "Log in", new_user_session_path %>
+          <%= link_to new_user_session_path, class: 'nav-link text-light' do %>
+           <i class="fas fa-sign-in-alt"></i>Log in<% end %>
         </li>
       <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     </header>
     <main>
-      <% if flash[:notice] %>
-      <p>
+      <p id="notice">
         <%= flash[:notice] %>
       </p>
-      <% end %>
 
     <%= yield %>
     </main>
     <footer>
-      <p>CopyRight Infratop.inc</p>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+
     </footer>
   </body>
 </html>
