--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,19 @@
-<h1>Users#index</h1>
 
-<%= render 'books/list', book: @book %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list' %>
+      <div class="row">
+        <%= link_to edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <%= render 'books/form_new' %>
+    </div>
+    <div class="col-md-8 offset-md-1">
 
 <h2>Users</h2>
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>image</th>
@@ -11,11 +21,16 @@
       <th colspan=3></th>
     </tr>
   </thead>
+  <tbody>
+    <% @users.each do |user| %>
+    <tr>
+      <td><%= image_tag user.get_profile_image(80,80) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to "Show", user_path(user.id) %></td>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
-
-<% @users.each do |user| %>
-  <%= image_tag user.get_profile_image(80,80) %>
-  <p><%= user.name %></p>
-  <%= link_to "Show", user_path(user.id) %>
-<% end %>
-
+    </div>
+  </div>
+</div>
