--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,25 @@
-<h1>Users#show</h1>
+<div class="container px-5 px-sm-0">
+  <div class="row">
 
-
-<% if @user == current_user %>
-  <%= render 'books/list', book: @book %>
+<% if @user.id == current_user.id %>
+    <div class="col-md-3">
+      <%= render 'books/list' %>
+      <div class="row">
+        <%= link_to edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <%= render 'books/form_new' %>
+    </div>
 <% else %>
+<div class="col-md-3">
   <h2>User info</h2>
   <%= image_tag @user.get_profile_image(100,100) %>
-  <table>
+  <table class="table">
     <tbody>
       <tr>
         <th>name</th>
-        <th><%= @user.name %></th>
+        <th><%= @user.books.name %></th>
       </tr>
       <tr>
         <th>introduction</th>
@@ -19,25 +28,42 @@
     </tbody>
   </table>
 
-<%= link_to "User編集(仮)", users_path %>
-
-  <h2>New book</h2>
-    <%= form_with model: @book, url: '/books', method: :post do |f| %>
-  <label>Title</label>
-    <%= f.text_field :title %>
-  <label>Opinion</label>
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-<% end %>
-
+<div class="row">
+  <%= link_to user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+</div>
+<%= render 'books/form_new' %>
+</div>
 <% end %>
 
 
+<div class="col-md-8 offset-md-1">
+  <h2 class="mt-3">My Books</h2>
+  <table class="table table-hover table-inverse">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan=3></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @user.books.each do |user_books| %>
+      <tr>
+        <td>
+          <%= link_to user_path(@user.id) do %>
+          <%= image_tag user_books.user.get_profile_image(80,80) %>
+          <% end %>
+        </td>
+        <td><%= link_to "#{user_books.title}", book_path(user_books.id) %></td>
+        <td><%= user_books.body %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<% @user.books.each do |user_books| %>
-<%= link_to user_path(@user.id) do %>
-  <%= image_tag user_books.user.get_profile_image(80,80) %>
-<% end %>
-  <%= link_to "#{user_books.title}", book_path(user_books.id) %>
-  <%= user_books.body %>
-<% end %>
+    </div>
+  </div>
+</div>
