--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,17 +16,11 @@
             </tr>
           </tbody>
         </table>
-      <div class="row">
-        <% if @book.user.id == current_user.id %>
-          <%= link_to edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
+        <div class="row">
+          <%= link_to edit_user_path(@book.user_id), class: 'btn btn-outline-secondary btn-block' do %>
           <i class="fas fa-user-cog"></i>
           <% end %>
-        <% else %>
-          <%= link_to user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
-          <i class="fas fa-user-cog"></i>
-          <% end %>
-        <% end %>
-      </div>
+        </div>
       <%= render 'form_new' %>
     </div>
 
