--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         </li>
         <li>
           <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-light' do %>
-          <i class="fas fa-users"></i>Log out<% end %>
+          <i class="fas fa-sign-out-alt"></i>Log out<% end %>
         </li>
       <% else %>
         <li>
