--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,11 +3,11 @@
   <div class="row">
     <div class="col-md-3">
       <%= render 'books/list' %>
-      <div class="row">
-        <%= link_to edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
-        <i class="fas fa-user-cog"></i>
-        <% end %>
-      </div>
+        <div class="row">
+          <%= link_to edit_user_path(current_user.id), class: 'btn btn-outline-secondary btn-block' do %>
+          <i class="fas fa-user-cog"></i>
+          <% end %>
+        </div>
       <%= render 'books/form_new' %>
     </div>
     <div class="col-md-8 offset-md-1">
