--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,14 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-
-<% if @user.id == current_user.id %>
     <div class="col-md-3">
-      <%= render 'books/list' %>
-      <div class="row">
-        <%= link_to edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
-        <i class="fas fa-user-cog"></i>
-        <% end %>
-      </div>
-      <%= render 'books/form_new' %>
-    </div>
-<% else %>
-<div class="col-md-3">
+
   <h2>User info</h2>
   <%= image_tag @user.get_profile_image(100,100) %>
   <table class="table">
     <tbody>
       <tr>
         <th>name</th>
-        <th><%= @user.books.name %></th>
+        <th><%= @user.name %></th>
       </tr>
       <tr>
         <th>introduction</th>
@@ -27,16 +16,13 @@
       </tr>
     </tbody>
   </table>
-
-<div class="row">
-  <%= link_to user_path(current_user), class: 'btn btn-outline-secondary btn-block' do %>
-    <i class="fas fa-user-cog"></i>
-  <% end %>
-</div>
-<%= render 'books/form_new' %>
-</div>
-<% end %>
-
+        <div class="row">
+          <%= link_to edit_user_path(@user.id), class: 'btn btn-outline-secondary btn-block' do %>
+          <i class="fas fa-user-cog"></i>
+          <% end %>
+        </div>
+      <%= render 'books/form_new' %>
+    </div>
 
 <div class="col-md-8 offset-md-1">
   <h2 class="mt-3">My Books</h2>
